// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <RealExampleRef /> Debe de mostrar el componente <MultipleCustomHooks /> 1`] = `
<div>
  <h1>
    Real Example!
  </h1>
  <hr />
  <MultipleCustomHooks />
  <button
    className="btn btn-primary mt-3"
    onClick={[Function]}
  >
    Show/Hide
  </button>
</div>
`;

exports[`Pruebas en el componente <RealExampleRef /> Debe mostrarse correctamente 1`] = `
<div>
  <h1>
    Real Example!
  </h1>
  <hr />
  <button
    className="btn btn-primary mt-3"
    onClick={[Function]}
  >
    Show/Hide
  </button>
</div>
`;
